--- a/.github/workflows/main_wsk2-travel-app-authserver.yml
+++ b/.github/workflows/main_wsk2-travel-app-authserver.yml
@@ -22,10 +22,15 @@ jobs:
           node-version: '18.x'
 
       - name: npm install, build, and test
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
+          rm -rf test
+          rm -rf src
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
